--- a/seniorDesign/Views/List/List.cshtml
+++ b/seniorDesign/Views/List/List.cshtml
@@ -37,7 +37,7 @@
 
     <div style="overflow: scroll; max-height: 360px;">
        
-        <table id="myTable1" class="table table-striped table-hover table-bordered" data-show-refresh="true" data-toggle="table" data-search="true" data-pagination="true" data-filter-control="true" data-sort-order="desc">
+        <table id="myTable1" class="table table-fixed table-striped table-hover table-bordered" data-show-refresh="true" data-toggle="table" data-search="true" data-pagination="true" data-filter-control="true" data-sort-order="desc">
             <thead>
                 <tr>
                     <th></th>
@@ -59,44 +59,44 @@
                     <th>
                         <div class="form-group has-feedback">
                             <input type="text" id="org" onkeyup="search(3)" class="form-control" />
-                            <i class="glyphicon glyphicon-search form-control-feedback"></i>
+                            <i class="fa fa-search form-control-feedback" style="padding-top: 10px"></i>
                         </div>
                     </th>
                     <th>
                         <div class="form-group has-feedback">
                             <input type="text" id="address" onkeyup="search(4)" class="form-control" />
-                            <i class="glyphicon glyphicon-search form-control-feedback"></i>
+                            <i class="fa fa-search form-control-feedback" style="padding-top: 10px"></i>
                         </div>
                     </th>
                     <th>
                         <div class="form-group has-feedback">
                             <input type="text" id="email" onkeyup="search(5)" class="form-control" />
-                            <i class="glyphicon glyphicon-search form-control-feedback"></i>
+                            <i class="fa fa-search form-control-feedback" style="padding-top: 10px"></i>
                         </div>
                     </th>
                     <th>
                         <div class="form-group has-feedback">
                             <input type="text" id="phone" onkeyup="search(6)" data-inputmask="'mask': '(999) 999-9999'" class="form-control" />
-                            <i class="glyphicon glyphicon-search form-control-feedback"></i>
+                            <i class="fa fa-search form-control-feedback" style="padding-top: 10px"></i>
                         </div>
                     </th>
                     <th>
                         <div class="form-group has-feedback">
                             <input type="text" id="fax" onkeyup="search(7)" class="form-control" />
-                            <i class="glyphicon glyphicon-search form-control-feedback"></i>
+                            <i class="fa fa-search form-control-feedback" style="padding-top: 10px"></i>
                         </div>
                     </th>
                     
                     <th>
                         <div class="form-group has-feedback">
                             <input type="text" id="services" onkeyup="search(8)" class="form-control" />
-                            <i class="glyphicon glyphicon-search form-control-feedback"></i>
+                            <i class="fa fa-search form-control-feedback" style="padding-top: 10px"></i>
                         </div>
                     </th>
                     <th>
                         <div class="form-group has-feedback">
                             <input type="text" id="authority" onkeyup="search(9)" class="form-control" />
-                            <i class="glyphicon glyphicon-search form-control-feedback"></i>
+                            <i class="fa fa-search form-control-feedback" style="padding-top: 10px"></i>
                         </div>
                     </th>
                     <th></th>
